--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "deploy": "gh-pages -d build",
     "start": "set PORT=3002; react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "copy build\\index.html build\\404.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
